--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="hotel,warsaw hotels, poland hotels">
     <script src="https://kit.fontawesome.com/a0361f626f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
-    <title>HTB | About</title>
+    <title>HTB | Contact</title>
 </head>
 <body>
     <header>
@@ -24,8 +24,52 @@
         </nav>
     </header>
 
-    
+    <section id="conatct-form" class="py-3">
+        <div class="container">
+            <h1 class="l-heading"><span class="text-primary">Contact</span> Us</h1>
+            <p>Please fill out the form below to contact us</p>
+            <form action="process.php">
+                <div class="form-group">
+                    <label for="name">Name</label>
+                    <input type="text" name="name" id="name">
+                </div>
+                <div class="form-group">
+                    <label for="email">email</label>
+                    <input type="email" name="email" id="email">
+                </div>
+                <div class="form-group">
+                    <label for="message">Message</label>
+                    <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                </div>
+                <button type="submit" class="btn">Submit</button>
+            </form>
+        </div>
+    </section>
+
+    <section id="contact-info" class="bg-dark">
+        <div class="container">
+            <div class="box">
+                <i class="fa-solid fa-hotel fa-3x"></i>
+                <h3>Location</h3>
+                <p>Warszawa, Grójecka 15</p>
+            </div>
+            <div class="box">
+                <i class="fa-solid fa-phone fa-3x"></i>
+                <h3>Phone Number</h3>
+                <p>+48 123 456 789</p>
+            </div>
+            <div class="box">
+                <i class="fa-solid fa-envelope fa-3x"></i>
+                <h3>Email</h3>
+                <p>office@hbt.com</p>
+            </div>
+        </div>
+    </section>
+
+    <div class="clr"></div>
  
+
+
     <footer id="main-footer">
         <p>Hotel BT &copy; 2019, All Right Reserved</p>
     </footer>
