--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="hotel,warsaw hotels, poland hotels">
     <script src="https://kit.fontawesome.com/a0361f626f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
     <title>HTB | Homepage</title>
 </head>
 <body>
